--- a/css/main.css
+++ b/css/main.css
@@ -825,9 +825,22 @@ html {
 .faq-section .question-title {
   color: rgba(51, 51, 51, 0.75);
   font-size: 2rem;
-  background: rgba(175, 175, 175, 0.65);
+  background: rgba(195, 195, 195, 0.65);
   padding: .5em 1em;
   margin-bottom: 1em;
+  cursor: pointer;
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+}
+
+.faq-section .question-title:hover {
+  background: rgba(175, 175, 175, 0.65);
+  -webkit-box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
+}
+
+.faq-section .question-title:focus {
+  background: rgba(165, 165, 165, 0.65);
 }
 
 .faq-section .question-title span {
@@ -840,7 +853,7 @@ html {
   padding-left: 1em;
   width: 95%;
   line-height: 1.25;
-  margin-bottom: 3em;
+  padding-bottom: 3em;
 }
 
 .faq-section .question-content:last-of-type {
