--- a/css/main.scss
+++ b/css/main.scss
@@ -814,9 +814,20 @@ html {
     .question-title {
         color: rgba($darkGrey, 0.75);
         font-size: 2rem;
-        background: rgba(175,175,175,0.65);
+        background: rgba(195,195,195,0.65);
         padding: .5em 1em;
         margin-bottom: 1em;
+        cursor: pointer;
+        transition: .3s ease-in-out;
+
+        &:hover {
+            background: rgba(175,175,175,0.65);
+            box-shadow: 0px 0px 20px rgba(0,0,0,0.25);
+        }
+
+        &:focus {
+            background: rgba(165,165,165,0.65);
+        }
 
         span {
             font-weight: normal;
@@ -829,8 +840,8 @@ html {
         padding-left: 1em;
         width: 95%;
         line-height: 1.25;
-        margin-bottom: 3em;
-
+        padding-bottom: 3em;
+        
         &:last-of-type {
             margin-bottom: 0;
         }
