--- a/css/main.css
+++ b/css/main.css
@@ -7,12 +7,34 @@
 
 body {
   font-family: Helvetica, Arial, sans-serif;
-  background: #4793A3;
+  background: #fff;
   overflow-x: hidden;
 }
 
 html {
   scroll-behavior: smooth;
+}
+
+@-webkit-keyframes sweep {
+  from {
+    opacity: 0;
+    margin-top: -10px;
+  }
+  to {
+    opacity: 1;
+    margin-top: 0;
+  }
+}
+
+@keyframes sweep {
+  from {
+    opacity: 0;
+    margin-top: -10px;
+  }
+  to {
+    opacity: 1;
+    margin-top: 0;
+  }
 }
 
 ::-webkit-scrollbar {
@@ -156,8 +178,8 @@ html {
   padding: 8px 24px;
   border-radius: 20px;
   text-decoration: none;
-  -webkit-transition: .33s ease-in-out;
-  transition: .33s ease-in-out;
+  -webkit-transition: background .33s ease-in-out, color .33s ease-in-out;
+  transition: background .33s ease-in-out, color .33s ease-in-out;
   border: 2px solid;
   text-transform: uppercase;
   font-weight: bold;
@@ -831,6 +853,7 @@ html {
   cursor: pointer;
   -webkit-transition: .3s ease-in-out;
   transition: .3s ease-in-out;
+  outline: none;
 }
 
 .faq-section .question-title:hover {
@@ -866,5 +889,10 @@ html {
   left: calc(50% - 70px);
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
+}
+
+.faq-section details[open] summary ~ * {
+  -webkit-animation: sweep .4s ease-in-out;
+          animation: sweep .4s ease-in-out;
 }
 /*# sourceMappingURL=main.css.map */
