--- a/css/main.scss
+++ b/css/main.scss
@@ -875,3 +875,101 @@ html {
     }
 }
 
+//////// TESTIMONIALS SECTION (TESTIMONIALS) STYLES ////////
+
+.testimonials-section {
+    background: rgb(47,47,43);
+    background: -moz-radial-gradient(circle, rgba(47,47,43,1) 0%, rgba(23,23,22,1) 100%);
+    background: -webkit-radial-gradient(circle, rgba(47,47,43,1) 0%, rgba(23,23,22,1) 100%);
+    background: radial-gradient(circle, rgba(47,47,43,1) 0%, rgba(23,23,22,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#2f2f2b",endColorstr="#171716",GradientType=1);
+    padding: 10em 25vw 7.5em 25vw;
+    border-bottom: 2px solid #fff;
+
+    .grid {
+        display:grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        column-gap: 1.5em;
+
+        .testimonial-box {
+            width: 100%;
+            height: 435px;
+            position:relative;
+            display: flex;
+            flex-direction: column;
+            padding-top: 3.5em;
+
+            .name {
+                z-index: 1;
+                font-size: 1.1rem;
+                margin-bottom: 2em;
+                text-align:center;
+                color: #FF6161;
+            }
+
+            .text {
+                color: #fff;
+                font-style: italic;
+                z-index: 1;
+                font-weight: lighter;
+                text-align:center;
+                width: 75%;
+                margin: 0 auto;
+                letter-spacing: 1px;
+                line-height: 2;
+                opacity: .95;
+                font-size: 1rem;
+                font-family: 'Segoe UI', Arial, Helvetica, sans-serif;
+            }
+
+            .quote-icon {
+                color: #fff;
+                z-index: 1;
+                position:absolute;
+                bottom: 1.5em;
+                left:50%;
+                transform:translateX(-50%);
+                font-size: 2rem;
+                color: #FF6161;
+            }
+
+            &.first::before, &.secnd::before, &.third::before {
+                content: "";
+                background-image: url('../img/testimonials/1.jpg');
+                background-size: cover;
+                position: absolute;
+                top: 0px;
+                right: 0px;
+                bottom: 0px;
+                left: 0px;
+                filter: brightness(0.65);
+                z-index: 0;
+            }
+
+            &.secnd::before {
+                background-image: url('../img/testimonials/2.jpg');
+            }
+
+            &.third::before {
+                background-image: url('../img/testimonials/3.jpg');
+            }
+        }
+    }
+
+    .large-text {
+        font-weight: 900;
+        width: 80%;
+        margin: 1em auto;
+        color: #575757;
+        font-size: 3rem;
+        text-align:center;
+        letter-spacing: 3px;
+        text-shadow: 0px 0px 30px rgba(0,0,0,0.5);
+    }
+
+    .btn {
+        position:absolute;
+        left:50%;
+        transform:translateX(-50%);
+    }
+}
