Added Large Responsive Media Queries

--- a/css/main.css
+++ b/css/main.css
@@ -332,8 +332,14 @@ html {
           transform: translateX(-50%);
 }
 
+.about-section .image-section {
+  height: 100%;
+  width: 100%;
+}
+
 .about-section .image-section .logo {
   width: 100%;
+  height: 100%;
   position: relative;
   top: -200px;
 }
@@ -1000,5 +1006,58 @@ html {
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
+}
+
+@media screen and (max-width: 1392px) {
+  .home-header .text-container {
+    height: 45vh;
+  }
+  .home-header .text-container .small-heading {
+    font-size: 1.1rem;
+  }
+  .home-header .text-container .big-heading {
+    font-size: 5rem;
+  }
+  .work .work-heading {
+    font-size: 1.65rem;
+  }
+  .work .text {
+    font-size: 1rem;
+  }
+  .work .carousel {
+    width: 90vw;
+  }
+  .work .carousel .carousel-image {
+    width: calc(0.275 * 50vw);
+    height: calc((0.275 * 50vw) * 1.25);
+  }
+  .about-section {
+    -ms-grid-columns: 4fr 5fr;
+        grid-template-columns: 4fr 5fr;
+    height: 80vh;
+  }
+  .about-section .text-section .title {
+    margin-top: 15%;
+    font-size: 2.75rem;
+  }
+  .about-section .text-section .text {
+    font-size: .9rem;
+  }
+  .contact-section .contact-form {
+    width: 45vw;
+  }
+  .large-footer {
+    padding: 10vh 12.5vw 0 12.5vw;
+  }
+}
+
+@media screen and (max-width: 1272px) {
+  .about-section {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+  }
+  .about-section .image-section .logo {
+    top: 0;
+  }
 }
 /*# sourceMappingURL=main.css.map */
