--- a/css/main.scss
+++ b/css/main.scss
@@ -568,6 +568,7 @@ html {
         left: calc(50% + 100px);
         top:50%;
         transform: scale(1.2, 1.25) translate(-50%, -50%);
+        text-align:center;
     }
 }
 
