--- a/css/main.css
+++ b/css/main.css
@@ -589,23 +589,23 @@ html {
 .about-header .page-title {
   text-transform: uppercase;
   font-weight: 900;
-  font-size: 3.5rem;
+  font-size: 4.5rem;
   color: #fff;
   letter-spacing: -3px;
   position: absolute;
-  left: calc(50% + 100px);
+  left: 50%;
   top: 50%;
-  -webkit-transform: scale(1.2, 1.25) translate(-50%, -50%);
-          transform: scale(1.2, 1.25) translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   text-align: center;
 }
 
 .introduction {
-  padding: 6em 20vw 0 20vw;
+  padding: 0 20vw;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
+  -ms-grid-columns: 2fr 1fr;
+      grid-template-columns: 2fr 1fr;
   height: 80vh;
   background: url("../img/pattern-bg.png") center/cover no-repeat;
   position: relative;
@@ -613,13 +613,21 @@ html {
 }
 
 .introduction .text-section {
-  width: 100%;
-  margin: 10vh 0 0 5vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .introduction .text-section .title {
   color: #333333;
-  font-size: 2rem;
+  font-size: 1.85vw;
   text-transform: uppercase;
   font-weight: 800;
   letter-spacing: -1px;
@@ -637,14 +645,19 @@ html {
   color: #4d4d4d;
   font-weight: lighter;
   margin-bottom: 2.5em;
+  font-size: 1vw;
 }
 
 .introduction .text-section .btn {
-  padding: 12px 72px;
+  padding: 12px 54px;
+  width: 180px;
 }
 
 .introduction .adam-img {
-  width: 95%;
+  width: 30vw;
+  position: absolute;
+  bottom: 0;
+  right: 20vw;
 }
 
 .get-in-touch {
@@ -1116,6 +1129,26 @@ html {
   .large-footer {
     padding: 10vh 12.5vw 0 12.5vw;
   }
+  .introduction {
+    padding: 0 15vw;
+  }
+  .introduction .text-section .title {
+    font-size: 1.75rem;
+  }
+  .introduction .text-section .about-text {
+    font-size: 1rem;
+  }
+  .introduction .adam-img {
+    right: 10%;
+    width: 35%;
+  }
+  .get-in-touch .title {
+    font-size: 2.5rem;
+    letter-spacing: 4px;
+  }
+  .get-in-touch .grid {
+    width: 70vw;
+  }
 }
 
 @media screen and (max-width: 1272px) {
@@ -1166,6 +1199,15 @@ html {
   .contact-section .contact-form {
     width: 60vw;
   }
+  .introduction {
+    padding: 0 5vw;
+  }
+  .introduction .text-section {
+    width: 75%;
+  }
+  .introduction .adam-img {
+    width: 40%;
+  }
 }
 
 @media screen and (max-width: 1040px) {
@@ -1174,6 +1216,37 @@ html {
   }
   .navbar .menu-icon {
     display: block;
+  }
+  .about-header .page-title {
+    font-size: 3rem;
+  }
+  .introduction {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    height: 70vh;
+  }
+  .introduction .text-section .title {
+    text-align: center;
+  }
+  .introduction .text-section .about-text {
+    text-align: center;
+    margin: 0 auto 2em auto;
+  }
+  .introduction .text-section .btn {
+    margin: 0 auto;
+  }
+  .introduction .adam-img {
+    display: none;
+  }
+  .get-in-touch .grid {
+    width: 90vw;
   }
 }
 
@@ -1287,6 +1360,18 @@ html {
     height: 250px;
     padding: 50px 0;
   }
+  .get-in-touch {
+    height: auto;
+    padding-bottom: 15vh;
+  }
+  .get-in-touch .grid {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    width: 50vw;
+  }
+  .get-in-touch .box {
+    height: 30vh;
+  }
 }
 
 @media screen and (max-width: 712px) {
@@ -1339,6 +1424,9 @@ html {
         grid-template-columns: 1fr;
     row-gap: 40px;
   }
+  .introduction {
+    height: 100vh;
+  }
 }
 
 @media screen and (max-width: 548px) {
@@ -1375,6 +1463,22 @@ html {
   }
   .about-section .text-section .text {
     font-size: .8rem;
+  }
+  .about-header .page-title {
+    font-size: 2.5rem;
+  }
+  .introduction {
+    height: 120vh;
+  }
+  .get-in-touch .title {
+    font-size: 1.75rem;
+    letter-spacing: 2.5px;
+  }
+  .get-in-touch .grid {
+    width: 75vw;
+  }
+  .get-in-touch .grid .box .text {
+    font-size: 1rem;
   }
 }
 /*# sourceMappingURL=main.css.map */
