--- a/css/main.scss
+++ b/css/main.scss
@@ -561,13 +561,13 @@ html {
     .page-title {
         text-transform: uppercase;
         font-weight: 900;
-        font-size: 3.5rem;
+        font-size: 4.5rem;
         color: #fff;
         letter-spacing: -3px;
         position:absolute;
-        left: calc(50% + 100px);
-        top:50%;
-        transform: scale(1.2, 1.25) translate(-50%, -50%);
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
         text-align:center;
     }
 }
@@ -575,21 +575,22 @@ html {
 //////// ABOUT SECTION (ABOUT) STYLES ////////
 
 .introduction {
-    padding: 6em 20vw 0 20vw;
+    padding: 0 20vw;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 2fr 1fr;
     height: 80vh;
     background: url('../img/pattern-bg.png') center/cover no-repeat;
     position:relative;
     overflow: hidden;
-
+    
     .text-section {
-        width: 100%;
-        margin: 10vh 0 0 5vw;
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
 
         .title {
             color: $darkGrey;
-            font-size: 2rem;
+            font-size: 1.85vw;
             text-transform: uppercase;
             font-weight: 800;
             letter-spacing: -1px;
@@ -607,15 +608,20 @@ html {
             color: lighten($darkGrey, 10%);
             font-weight: lighter;
             margin-bottom: 2.5em;
+            font-size: 1vw;
         }
 
         .btn {
-            padding: 12px 72px;
+            padding: 12px 54px;
+            width: 180px;
         }
     }
 
     .adam-img {
-        width: 95%;
+        width: 30vw;
+        position:absolute;
+        bottom:0;
+        right: 20vw;
     }
 }
 
@@ -1106,6 +1112,38 @@ html {
     .large-footer {
         padding: 10vh 12.5vw 0 12.5vw;
     }
+
+    .introduction  {
+        padding: 0 15vw;
+
+        .text-section {
+
+            .title {
+                font-size: 1.75rem;
+            }
+
+            .about-text {
+                font-size: 1rem;
+            }
+        }
+
+        .adam-img {
+            right: 10%;
+            width: 35%;
+        }
+    }
+
+    .get-in-touch {
+
+        .title {
+            font-size: 2.5rem;
+            letter-spacing: 4px;
+        }
+
+        .grid {
+            width: 70vw;
+        }
+    }
 }
 
 @media screen and (max-width: 1272px) {
@@ -1178,6 +1216,18 @@ html {
             width: 60vw;
         }
     }
+
+    .introduction {
+        padding: 0 5vw;
+
+        .text-section {
+            width: 75%;
+        }
+
+        .adam-img {
+            width: 40%;
+        }
+    }
 }
 
 @media screen and (max-width:1040px) {
@@ -1191,6 +1241,46 @@ html {
         .menu-icon {
             display: block;
         }
+    }
+
+    .about-header {
+        .page-title {
+            font-size: 3rem;
+        }
+    }
+
+    .introduction {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 70vh;
+
+        .text-section {
+
+            .title {
+                text-align:center;
+            }
+
+            .about-text {
+                text-align:center;
+                margin: 0 auto 2em auto;
+            }
+
+            .btn {
+                margin: 0 auto;
+            }
+        }
+        .adam-img {
+            display:none;
+        }
+    }
+
+    .get-in-touch {
+
+        .grid {
+            width: 90vw;
+        }
+
     }
 }
 
@@ -1343,6 +1433,19 @@ html {
         }
 
     }
+
+    .get-in-touch {
+        height: auto;
+        padding-bottom: 15vh;
+
+        .grid {
+            grid-template-columns: 1fr;
+            width: 50vw;
+        }
+        .box {
+            height: 30vh;
+        }
+    }
 }
 
 @media screen and (max-width: 712px) {
@@ -1421,6 +1524,10 @@ html {
             }
         }
     }
+
+    .introduction {
+        height: 100vh;
+    }
 }
 
 @media screen and (max-width: 548px) {
@@ -1468,6 +1575,35 @@ html {
 
             .text {
                 font-size: .8rem;
+            }
+        }
+    }
+
+    .about-header {
+        .page-title {
+            font-size: 2.5rem;
+        }
+    }
+
+    .introduction {
+        height: 120vh;
+    }
+
+    .get-in-touch {
+
+        .title {
+            font-size: 1.75rem;
+            letter-spacing: 2.5px;
+        }
+
+        .grid  {
+            width: 75vw;
+
+            .box {
+
+                .text {
+                    font-size: 1rem;
+                }
             }
         }
     }
