--- a/css/main.scss
+++ b/css/main.scss
@@ -748,12 +748,6 @@ html {
             width: 175px;
         }
     }
-
-    &.faq {
-        .divider {
-            top: 65%;
-        }
-    }
 }
 
 //////// SERVICES SECTION (SERVICES) STYLES ////////
@@ -957,11 +951,10 @@ html {
 
         .testimonial-box {
             width: 100%;
-            height: 435px;
             position:relative;
             display: flex;
             flex-direction: column;
-            padding-top: 3.5em;
+            padding: 3.5em 0 7em 0;
 
             .name {
                 z-index: 1;
@@ -1144,6 +1137,14 @@ html {
             width: 70vw;
         }
     }
+
+    .faq-section {
+        padding: 15vh 20vw;
+    }
+
+    .testimonials-section {
+        padding: 10em 17.5vw 7.5em 17.5vw;
+    }
 }
 
 @media screen and (max-width: 1272px) {
@@ -1250,6 +1251,14 @@ html {
             column-gap: 1.25em;
         }
     }
+
+    .faq-section {
+        padding: 15vh 10vw;
+    }
+
+    .testimonials-section {
+        padding: 10em 12.5vw 7.5em 12.5vw;
+    }
 }
 
 @media screen and (max-width:1040px) {
@@ -1345,6 +1354,10 @@ html {
                 }
             }
         }
+    }
+
+    .testimonials-section {
+        padding: 10em 5vw 7.5em 5vw;
     }
 }
 
@@ -1522,6 +1535,31 @@ html {
     .header-w-divider {
         .page-title {
             font-size: 2.5rem;
+        }
+    }
+
+    .faq-section {
+
+        .question-title {
+            font-size: 1.5rem;
+            text-align:center;
+        }
+
+        .question-content {
+            font-size: 1rem;
+        }
+    }
+
+    .testimonials-section {
+        
+        .grid {
+            grid-template-columns: 1fr;
+            row-gap: 2em;
+
+            .testimonial-box {
+                width:50%;
+                margin: 0 auto;
+            }
         }
     }
 }
@@ -1735,6 +1773,10 @@ html {
         .divider {
             top: 30%;
         }
+
+        .page-title {
+            width:100%;
+        }
     }
 
     .latest-work-section {
@@ -1751,6 +1793,16 @@ html {
         
         .work-grid {
             grid-template-columns: 1fr;
+        }
+    }
+
+    .testimonials-section {
+        
+        .grid {
+
+            .testimonial-box {
+                width:75%;
+            }
         }
     }
 }
