--- a/css/main.scss
+++ b/css/main.scss
@@ -754,7 +754,7 @@ html {
 
 .services-section {
     padding: 15vh 10vw;
-    background: url('../img/setup-background.jpg') center/cover no-repeat fixed;
+    background: url('../img/setup-baackground-2.jpg') center/cover no-repeat fixed;
     width: 100vw;
 
     .grid {
