--- a/css/main.css
+++ b/css/main.css
@@ -791,7 +791,7 @@ html {
 
 .services-section {
   padding: 15vh 10vw;
-  background: url("../img/setup-background.jpg") center/cover no-repeat fixed;
+  background: url("../img/setup-baackground-2.jpg") center/cover no-repeat fixed;
   width: 100vw;
 }
 
